Resolved issue where code-block text was wrapping instead of overflowing

--- a/app/assets/stylesheets/_posts_projects.scss
+++ b/app/assets/stylesheets/_posts_projects.scss
@@ -48,7 +48,9 @@ $border: #E9E9E9;
 	hr {
 		margin: 3em auto;
 	}
-	word-wrap: break-word;
+	h1{
+		word-wrap: break-word;
+	}
 }
 
 #share_box {
